--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,33 +2,65 @@
 
 /*MAIN*/
 
+body {
+  font-family: 'Lato', sans-serif;
+  font-weight: 300;
+  font-size: 1em;
+  color: #333;
+  -webkit-box-sizing: border-box;
+   -moz-box-sizing: border-box;
+   box-sizing: border-box;
+
+}
+
+/* Custom CSS */
+
 .wrapper{
   margin: 0 auto;
   width: 100%;
-  font-family: 'Lato', sans-serif;
-  color: #333;
-  font-size: 1em;
-  font-weight: 300;
 }
 
+header{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 9000;
+  min-height: 50px;
+  overflow: auto;
+  background-color: #fff;
+  border-bottom: 5px solid #CE2701;
+}
+
+
+
 h1 {
-  font-size: 3em;
-  font-weight: 900;
+    background-image: url('assets/images/ss_bike.png');
+    background-size: contain;
+    width: 50px;
+    height: 50px;
+    text-indent: 100%;
+    white-space: nowrap;
+    overflow: hidden;
+    float: left;
 }
 
 h2 {
-  font-size: 2em;
+  font-size: 5.5em;
   font-weight: 900;
+  letter-spacing: -.02em;
+  color: #fff;
 }
 
 h3 {
-  font-size: 1.75em;
+  font-size: 2em;
   font-weight: 900;
+  text-transform: uppercase;
 }
 
 h4 {
   font-size: 1.5em;
-  font-weight: 900;
+  font-weight: 300;
 }
 
 h5 {
@@ -41,31 +73,21 @@ h6 {
   font-weight: 900;
 }
 
+
+
 /*NAVIGATION*/
-header{
-  background-color: #eeeeee;
-  padding: 10px;
-  min-height: 50px;
-  width: 100%;
-  overflow: auto;
-  border: 1px solid black;
-}
+
 nav{
-  max-width: 80%;
+  max-width: 100%;
   margin: 0 auto;
-  border: 1px solid black;
-  float:right;
 }
 
 nav ul{
   list-style-type: none;
-  float: right;
 }
 nav ul li{
   display: inline;
-  /*padding: 15px;*/
   line-height: 40px;
-  border: 1px solid black;
 }
 nav ul li a{
   color: #333;
@@ -73,34 +95,61 @@ nav ul li a{
 }
 
 nav ul li a:hover{
-  /*font-weight: bold;*/
   border-bottom: 1px solid #333;
 }
 
-nav ul li:after {
-   content:" | ";
-   padding: 0 5px 0 15px;
-}
 
-nav ul li:last-child:after {
-   content:" ";
-}
 
 .brand {
-  max-width: 80%;
+  max-width: 90%;
   margin: 0 auto;
-  border: 1px solid black;
 }
 
-.profile-nav {
-  float: right;
-  border: 1px solid black;
+
+.logins-messages-creators {
+  position: fixed;
+  z-index: 10000;
+  top: 50px;
+  right: 0;
+  width: 350px;
 }
 
 .profile-nav:after {
   content: " ";
   clear: both;
 }
+
+#banner {
+    background-image: url('../images/steilacoom.jpg');
+    height: 500px;
+    background-size: cover;
+    padding-top: 50px;
+    text-align: center;
+    color: #fff;
+    text-shadow: 2px 2px 8px #000000;
+}
+
+#banner h2 {
+  position: relative;
+  top: 200px;
+}
+
+#banner h4 {
+  position: relative;
+  top: 210px;
+  font-size:  2.5em;
+}
+
+#banner p {
+  position: relative;
+  top: 212px;
+  padding: 10px;
+  font-size: 1.5]2em;
+}
+
+
+
+
 
 img{max-width: 100%;}
 
@@ -113,53 +162,99 @@ p{margin: 0 0 10px 0; line-height: 1;}
 }*/
 
 input{
-      width: 80%;
+      width: 100%;
       border:0;
       padding:10px;
       margin: 2px auto;
-      text-align: center;
-      font-size:12px;
+      font-size:.8em;
       display: block;
+      color: #444;
     }
 input[type="submit"] {
   background: red;
   color:white;
 }
 
+.top_nav {
+  top: 20px;
+}
+.top-nav-register, .top-nav-login {
+  display: inline-block;
+  width: 200px;
+  height: 20px;
+  top: 30px;
+  padding: 3px;
+  border-bottom: 4px solid rgba(170,21,5,1);
+  font-size: 1em;
+  font-weight: 900;
+  text-align: center;
+  line-height: .9em;
+  color: #333;
+}
+
+.top-nav-register:hover, .top-nav-login:hover {
+  border-bottom: 4px solid rgba(87, 138, 7, 1);
+}
+
+.top-nav-register:active, .top-nav-login:active {
+  border-bottom: 4px solid rgba(240,80,62, 1);
+}
+
 #register, #login, .user-messages, .new-bike-posting {
-  width: 100%;
-  /*height: 200px;*/
+  width: 90%;
   overflow: auto;
   background-color: #eee;
-  border: 1px solid black;
 }
 
-.reg-login {
-  width: 100%;
-}
-
-/*.new-bike-posting {
-  background-color: #ddd;
-  float: left;
-  width: 200px;
-  overflow: auto;
-  border: 1px solid black;
+/*.reg-login {
+  width: 300px;
 }*/
 
+.API-register, .API-login {
+  /*display: inline-block;*/
+  z-index: 9999;
+/*  right: 200px;*/
+  width: 300px;
+  height: 160px;
+  padding: 10px 5px;
+  background-color: rgba(0, 0, 0, .8);
+}
+
+/*.API-login {
+  right: 40px;
+  height: 170px;
+}
+*/
+
+
+
 .container{
-  max-width: 80%;
+  max-width: 100%;
   margin: 0 auto 40px;
   overflow: auto;
-  border: 1px solid black;
+}
+
+.main, .secondary {
+  max-width: 100%;
+  margin: 10px auto;
+}
+
+.secondary {
+  background-color: #e6e6e6;
+}
+
+.list-a-bike {
+  margin-right: 10%;
 }
 
 .bikes-for-sale, .profile, .post-bike {
   overflow: auto;
-  border: 1px solid black;
+  margin-left: 10%;
 }
 
 .post-bike {
   background-color: #eee;
+  overflow: auto;
 }
 
 .bike-posts {
@@ -169,7 +264,6 @@ input[type="submit"] {
   height: 200px;
   overflow: auto;
   float: left;
-  border: 1px solid black;
 }
 
 .bike-posts:after {
@@ -181,4 +275,70 @@ input[type="submit"] {
   float: left;
 }
 
+.bike-posts {
+  width: 200px;
+  height: 200px;
+  margin: 5px;
+  float: left;
+  background: #eee;
+  border-left: 5px solid rgba(87, 138, 7, 1);
+/*  box-shadow: 3px 2px 3px rgba(0,0,0,0.2);*/
+  color: #555;
+  /*text-shadow: 1px 3px 1px rgba(0,0,0,0.5);*/
+  transition: all .3s ease-in-out;
+}
 
+.bike-posts:hover{
+  background: rgba(87, 138, 7, 1);
+  transform: scale(1.02);
+  color: #fff;
+}
+
+.bike-posts:active{
+  background: radial-gradient(#FFEF8C 0%, #FF6A00 100%);
+}
+
+.bikes-for-sale, .profile, .current-user, .favorites {
+  width: 75%;
+  min-height: 300px;
+  margin-left: 10%
+}
+
+.bikes-for-sale:after {
+  content: '';
+  clear: both;
+}
+
+.current-user {
+  width: 50%;
+  min-height: 300px;
+}
+
+.favorites {
+  width: 25%;
+  min-height: 300px;
+}
+.messages-container {
+  width: 310px;
+  height: 150px;
+  background-color: purple;
+}
+
+.current-user, .favorites {
+  padding: 10px;
+  background-color: purple;
+}
+
+
+
+.left {
+  float: left;
+}
+
+.right {
+  float: right;
+}
+
+.clear {
+  clear: both;
+}
