--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -27,7 +27,7 @@ header{
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
+  height: 40px;
   background-color: #fff;
   /*overflow: auto;
   color: #fff;*/
@@ -44,7 +44,7 @@ h1 {
     margin-top: 10px;
     /*text-indent: 100%;*/
     font-family: 'Lobster', cursive;
-    color: #fff;
+    color: #333;
     white-space: nowrap;
     overflow: hidden;
     float: left;
@@ -52,7 +52,7 @@ h1 {
 
 h2 {
   font-family: 'Lobster', cursive;
-  font-size: 5.5em;
+  font-size: 5.8em;
   font-weight: 900;
   letter-spacing: -.02em;
   color: #fff;
@@ -86,7 +86,8 @@ h6 {
 /*NAVIGATION*/
 
 nav {
-  /*max-width: 100%;*/
+  position: relative;
+/*  width: 80%;*/
 /*  margin: 0 auto;*/
   float: right;
 }
@@ -112,20 +113,23 @@ nav ul li a:hover{
 
 
 .brand {
-  max-width: 90%;
-  margin: 0 auto;
+  width: 100%;
+/*  margin: 0 3%;*/
 }
 
+.brand h1 {
+  margin: 12px 0 0 3%;
+}
 
 .top-nav {
-  width: 100%;
-  margin-top: 20px;
+  width: 400px;
+  margin-top: 7px;
   float: right;
 }
 
 .top-nav > li {
   display: inline-block;
-  width: 25%;
+  width: 70px;
   height: 20px;
   margin: 0 0 0 1%;
   padding: 3px 10px;
@@ -134,23 +138,24 @@ nav ul li a:hover{
   text-align: center;
   text-transform: uppercase;
   line-height: 1.6em;
-  /*color: #333;*/
-  color: rgba(255,255,255, 1);
-  background-color: rgba(0,0,0, .5);
+  color: #333;
+  /*color: rgba(255,255,255, 1);*/
+  /*background-color: rgba(0,0,0, .5);*/
   /*border: .15em solid rgba(255,255,255, .5);*/
   border-radius: 15px;
 }
 
 .top-nav li:hover {
-/*  color: rgba(255,255,255, 1);*/
-  background-color: rgba(87, 138, 7, .8);
+  color: rgba(255,255,255, 1);
+  background-color: rgba(87, 138, 7, 1);
 }
 
 .top-nav li:active {
+  color: rgba(255,255,255, 1);
   background-color: rgba(170,21,5,1);
 }
 
-.list-a-bike {
+/*.list-a-bike {
   background-color: rgba(87, 138, 7, 1);
   border-radius: 15px;
 }
@@ -161,7 +166,7 @@ nav ul li a:hover{
 
 .list-a-bike:active {
   background-color: 3px solid rgba(170,21,5,.5);
-}
+}*/
 
 .profile-nav:after {
   content: " ";
@@ -170,12 +175,13 @@ nav ul li a:hover{
 
 #banner {
   position: relative;
-  top: 60px;
+  top: 0px;
   left: 0;
-  background-image: url('../images/steilacoom.jpg');
-  height: 720px;
-  background-size: 100%;
-  background-repeat: no-repeat;
+  background-image: url('../images/steilacoom_02.jpg');
+  height: 600px;
+  background-size: cover;
+  background-position: center;
+/*  background-repeat: no-repeat;*/
   /*padding-top: 50px;*/
   text-align: center;
   color: #fff;
@@ -184,18 +190,18 @@ nav ul li a:hover{
 
 #banner h2 {
   position: relative;
-  top: 200px;
+  top: 180px;
 }
 
 #banner h4 {
   position: relative;
-  top: 210px;
+  top: 190px;
   font-size:  2.5em;
 }
 
 #banner p {
   position: relative;
-  top: 212px;
+  top: 192px;
   padding: 10px;
   /*font-size: 1.5]2em;*/
 }
@@ -242,6 +248,10 @@ input[type="submit"] {
   margin: 0 auto;
 }
 
+.register-a, .login-a {
+  font-weight: 700;
+}
+
 .container{
   max-width: 100%;
   margin: 0 auto 40px;
@@ -285,19 +295,18 @@ input[type="submit"] {
 .bike-posts {
   position: relative;
   display: inline-block;
-/*  max-width: 15%;
-  min-width: 15%;*/
   height: 80px;
   overflow-y: scroll;
-  padding: 5px;
+  padding: 5px 7px;
   margin: 5px 0 0 5px;
-  background: #eee;
-  border-left: 5px solid rgba(87, 138, 7, 1);
-  color: #555;
+  background: rgba(0,0,0, 0.3);
+  border-top: 3px solid rgba(75,75,75, 1);
+  color: #bbb;
   transition: all .3s ease-in-out;
 }
 
 .bike-posts:hover{
+  border-top: 3px solid rgba(166,213,8,1);
   background: rgba(87, 138, 7, 1);
   transform: scale(1.02);
   color: #fff;
@@ -307,8 +316,13 @@ input[type="submit"] {
   background: radial-gradient(#FFEF8C 0%, #FF6A00 100%);
 }
 
+.bike-posts h6 {
+  margin: 4px 0;
+}
+
 .bike-posts p {
   font-size: .8em;
+  line-height: 1.2;
   width: 90%;
 }
 
@@ -316,15 +330,29 @@ input[type="submit"] {
   width: 100%;
 }
 
+/*.bike-posts p:hover, .bike-posts p:active {
+  color: #fff;
+}
+*/
+
+
 .favorite-bike {
   position: absolute;
   bottom: 10px;
   right: 10px;
 }
 
-.favorite-bike:hover {
-  color: red;
+.delete-bike {
+  position: absolute;
+  bottom: 10px;
+  right: 40px;
 }
+
+.favorite-bike:hover {
+  color: #fff;
+}
+
+
 
 .fav-holder {
   /*position: relative;*/
@@ -336,10 +364,10 @@ input[type="submit"] {
   width: 40px;
   /*width: 20%;*/
   height: 40px;
-  margin: 0 10px 0 0;
+  margin: 5px 10px 0 0;
   padding: 5px;
   /*background-image: url('../images/ss_bike.svg');*/
-  background-color: #333;
+  background-color: #95CE00;
   display: inline-block;
   border-radius: 50% 0 50% 50%;
   float: left;
@@ -350,21 +378,13 @@ input[type="submit"] {
   font-size: .65em;
   text-align: center;
   text-transform: uppercase;
-  color: rgba(255,255,255,0.5);
+  color: rgba(255,255,255,1);
 }
 
 .fav-bike-icon p:last-child {
   font-size: 1.4em;
   text-align: center;
-  color: rgba(255,255,255,0.5);
-}
-
-.favorites:after {
-  content: '';
-  clear: both;
-  display: block;
-  visibility: hidden;
-  height: 0;
+  color: rgba(255,255,255,1);
 }
 
 .close-me-fav {
@@ -385,7 +405,7 @@ input[type="submit"] {
 
 
 .current-user, .favorites {
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 .current-user h4, .favorites h4 {
@@ -428,12 +448,17 @@ input[type="submit"] {
 }*/
 
 .favorites {
-  width: 100%;
-/*  min-height: 300px;
-  padding-top: 10px;
-  margin-top: 10px;
-  overflow: auto;*/
+  overflow: auto;
 }
+
+.favorites:after {
+  content: '';
+  clear: both;
+  display: block;
+  visibility: hidden;
+  height: 0;
+}
+
 
 .messages-container {
   width: 290px;
@@ -462,24 +487,41 @@ input[type="submit"] {
 }
 
 .usr-posts {
-  border-left: 5px solid #CE2701;
+  position: relative;
+  display: inline-block;
+  height: 80px;
+  overflow-y: scroll;
+  padding: 5px 7px;
+  margin: 5px 0 0 5px;
+  border-left: 5px solid rgba(112,173,5,1);
+  background: rgba(44, 85, 3, 0.8);
+  color: #fff;
+  transition: all .3s ease-in-out;
+
+/*
+  padding-left: 10px;
+  color: #fff;*/
 }
 
 .usr-posts:hover {
-  background-color: #CE2701;
+  border-left: 5px solid rgba(203,78,10,1);
+  background-color: rgba(138,53,7,1);
+  color: #fff;
 }
 
 .usr-posts p {
+  font-size: .8em;
+  line-height: 1.2;
   width: 80%;
 }
 
 
 .usr-favs {
-  background-color: #8D449E;
+  background-color: #95CE00;
 }
 
 .usr-favs:hover {
-  background-color: #8D449E;
+  background-color: #C1CE00;
 }
 
 
@@ -664,7 +706,10 @@ label {
 
 .curr-user-scheme {
   position: absolute;
-  top: 60px;
+  top: 40px;
+  height: 560px;
+  overflow-x: hidden;
+  overflow-y: scroll;
   right: 0;
   z-index: 200;
   color: #fff;
@@ -689,21 +734,22 @@ label {
 
 .bike-list-scheme {
   position: relative;
-  top: -35px;
+  top: 0px;
   left: 0;
+  border-top: 5px solid #222;
 /*  z-index: 500;*/
 }
 
 .register-scheme {
   position: absolute;
-  top: 60px;
+  top: 40px;
   left: 0;
   z-index: 700;
 }
 
 .login-scheme {
   position: absolute;
-  top: 60px;
+  top: 40px;
   left: 0;
   z-index: 800;
 }
@@ -712,7 +758,6 @@ label {
 header {
   z-index: 1000;
 }
-
 
 .flexbox-stretch-vertical {
   display: -ms-flexbox;
